# driver_api_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
agent/: __init__.py  main.py
agent/analyzer/: __init__.py  architecture.py  dataflow.py  dependency.py  sequence.py
agent/generator/: __init__.py  design_generator.py  md_generator.py
agent/incremental/: __init__.py  diff_detector.py  merger.py  region_parser.py
agent/llm/: __init__.py  base.py  claude_client.py  description_generator.py  openai_client.py  response_cache.py  usage_tracker.py
agent/models/: __init__.py  ir.py
agent/parser/: __init__.py  base.py  comment_parser.py  enum_parser.py  function_parser.py  macro_parser.py  struct_parser.py
agent/utils/: __init__.py  config.py  file_utils.py  logger.py
agent/validator/: __init__.py  base.py  coverage_checker.py  naming_checker.py  param_direction_checker.py  signature_checker.py  struct_comment_checker.py
config/: default.yaml
docs/: 01_智能化文档生成方案_规划.md  02_Phase1_实施计划_MVP.md  03_Phase2_实施计划_增强.md  04_Phase3_实施计划_LLM增强.md  05_Phase4_实施计划_设计文档.md
